[package]
name = "goofgenie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tungstenite = "0"

strum = "0"
strum_macros = "0"
clap = { version = "3", features = ["derive"] }
toml = "0"
serde_derive = "1"
bytemuck = { version = "*", features = ["derive"] }

[profile.release]
codegen-units = 1
strip = true
lto = true
